creation of class bike and helper class + creation of custom theme class

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  location: ^4.2.0
   flutter:
     sdk: flutter
 
@@ -45,7 +46,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - data/data.sus
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
