--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  connectivity: ^3.0.6
+  http: ^0.13.3
   location: ^4.2.0
   flutter:
     sdk: flutter
