--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,15 +22,16 @@ environment:
 
 dependencies:
   connectivity: ^3.0.6
+  smooth_page_indicator: ^0.3.0-nullsafety.0
   http: ^0.13.3
-  location: ^4.2.0
+  location: ^4.3.0
   flutter:
     sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
