--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,14 @@ dependencies:
   cupertino_icons: ^1.0.3
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: data/icon.png
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
