--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.13.3
   location: ^4.3.0
   url_launcher: ^6.0.9
+  path_provider: ^2.0.2
   flutter:
     sdk: flutter
 
@@ -57,7 +58,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - data/data.sus
+    - data/pref.sus
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
