--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ride
-description: A new Flutter project.
+description: A simple app to help you ride your bike
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -27,6 +27,7 @@ dependencies:
   location: ^4.3.0
   url_launcher: ^6.0.9
   path_provider: ^2.0.2
+  shared_preferences: ^2.0.7
   flutter:
     sdk: flutter
 
@@ -37,6 +38,7 @@ dependencies:
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
+  flutter_native_splash: ^1.2.1
   flutter_test:
     sdk: flutter
 
@@ -58,7 +60,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - data/pref.sus
+    - data/icon.png
+    - data/splash.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
